--- a/ev3dev-segway/demos/CMakeLists.txt
+++ b/ev3dev-segway/demos/CMakeLists.txt
@@ -1,2 +1,3 @@
 add_ev3_executable(segway-test         segway-test.cpp)
 add_ev3_executable(imu-test            imu-test.cpp)
+add_ev3_executable(led-test            led-test.cpp)
